--- a/web/cadastro.html
+++ b/web/cadastro.html
@@ -1,122 +1,40 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
+
     <head>
-        <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+
         <meta charset="utf-8">
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+        <meta name="description" content="">
+        <meta name="author" content="">
 
-        <title>Cadastro</title>
+        <title>DropBooks</title>
+
         <script src="res/js/Cadastro.js"></script>
-        <script src="res/jquery-3.3.1.js"></script>
+        <script src="res/jquery-3.3.1.js"></script>   
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.mask/1.14.8/jquery.mask.js"></script>
+
+        <!-- Bootstrap core CSS -->
+        <link href="res/css/bootstrap.min.css" rel="stylesheet">
+
+        <!-- Custom styles for this template -->
+        <link href="res/css/modern-business.css" rel="stylesheet">
+
         <style>
-            *{
-                color: black;
-                font-family: arial;
-            }
-            /*Meu cogio*/
-            .cabecalho{
-                height: 40px;	
-                width: 100%; 
-                margin-bottom: 5%;
-                margin: auto;
-            }
-
-            .login,.nome{
-                float: right;
-                font-size: 18px;
-                color: white;
-            }
-
-            .nome{margin-right: 25%;}
-
-            #caixa2{
-                margin-top: 5%;
-                margin-left: 20%;
-                margin-bottom: 3%;
-                clear: both;
-
-            }
-
-            #botao1, .btn{
-
-                width: 15%;
-                background: #008B8B;
-                color: white;
-                border: #008B8B;
-
-
-            }
-            #botao1{
-                margin: 0;
-                margin-left: 5%;
-
-            }
-            nav >a{
-                margin-bottom: 3%;
-                font-size: 22px;
-                color: white;
-            }
-
-            #menu a:hover{color: black;}
-
-            body{background-image: url(res/img/bgPadrao.jpg);}
 
             h2{
+                margin-top: 5%;
                 text-align: center;
-                margin-bottom: 2%;
+                margin-bottom: 5%;
                 color: black;
             }
 
-            #block1{
+            .container{
                 margin:auto;
-                width: 55%;
+                width: 70%;
                 height: 120%;
-                color: black;
                 font-size: 16px;
-                padding: 2px;
-            }
-
-            .textos1{
-                float:left;
-                margin:0;
-                width:25%;
-                margin-top:14px;
-                text-align: left;
-                padding: 3px;
-
-            }
-
-            .cxs1,#telcx{
-                float:right;
-                margin:0;
-                width: 75%;
-                margin-top:14px;
-            }
-
-            #ddd{
-                width:18%;
-                margin:0;
-            }
-
-            #telefone{
-                width:80%;
-                margin:0;
-            }
-
-            #tipo{
-                height:30px;
-                margin-top:235px;
-                margin-bottom: 2%;					
-            }
-
-            #tipo .texto{
-                margin:0;		
-                display:inline;
-                float:left;
-            }
-
-            #tipo div{
-                float: left;
-                margin-left: 21%;
             }
 
             #tipo .cte{display:inline}
@@ -129,165 +47,233 @@
                 margin-top:20px;
             }	
 
-            h3{
-                margin-top: 10%;
+            #caixa2 {
+                margin-top: 2%;
+                margin-left: 20%;
+                margin-bottom: 3%;
                 clear: both;
             }
 
-            a{
-                color:  white;
+            #botao1,#cadastrar,#limpar{
+                width: 15%;
 
+
+                border: #00008B;
             }
 
-            a:hover{
+            #botao1 {
                 color: white;
-                text-decoration: none;
+                margin: 0;
+                margin-left: 2%;
             }
 
-            .btn{
+            #cadastrar,#limpar{
+                margin-top: 15px;
+                margin-left: 5%;
+            }
+
+            #espaco{
                 margin-top: 2%;
-                background: white;
-                color: black;
+                margin-left: 7%;
+            }	
+
+            #form{
+                margin-bottom: 5%;
             }
 
-            .col-auto col-md-5 {
-                border: 1px solid black;
+            input{
+                margin-bottom: 3%;
             }
 
-        </style>	
+        </style>
+
     </head>
-
+    
     <body>
 
-
-        <div class="cabecalho">
-            <a href="login.jsp" class="login">Login/Registra-se</a>
-            <span class="nome">Droopboks</span>
-        </div>
-
-
-
-        <form id="caixa2">
-            <div class="form-row align-items-center">
-                <div class="col-auto my-1">
-                    <select class="custom-select mr-sm-2" id="tipoPesquisa">
-                        <option>Titulo</option>
-                        <option>Autor</option>
-                        <option>Editora</option>
-                        <option>Genêro</option>
-                    </select>
+        <!-- Navigation -->
+        <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-primary fixed-top">
+            <div class="container">
+                <a class="navbar-brand" href="index.jsp">DropBooks</a>
+                <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarResponsive">
+                    <ul class="navbar-nav ml-auto">
+                        <li class="nav-item">
+                            <a class="nav-link" href="index.jsp">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="Contato.jsp">Contato</a>
+                        </li>
+                    </ul>
                 </div>
-
-                <div class="col-auto col-md-6">
-                    <input class="form-control mr-sm-2" type="search" placeholder="Pesquisar" aria-label="Pesquisar" name="pesquisa">
-                </div>
-                <button type="submit" class="btn btn-primary" id="botao1" name="botao1">Pesquisa</button>
             </div>
-        </form>
-
-        <nav class="nav nav-pills flex-column flex-sm-row" id="menu">
-            <a class="flex-sm-fill text-sm-center nav-link" href="#">Home</a>
-            <a class="flex-sm-fill text-sm-center nav-link" href="#">Livro</a>
-            <a class="flex-sm-fill text-sm-center nav-link" href="#">FAQ</a>
-            <a class="flex-sm-fill text-sm-center nav-link" href="contato.html">Contato</a>
         </nav>
 
         <h2>Cadastro de Usuário</h2>
+
         <form method="post" id="form" name="form" action="CadastroServlet" onsubmit="teste()">
 
-            <div id="block1">
+            <div class="container">
 
-                <p class="textos1" >Email :</p>
-                <input type="email" name="email" id="email"  maxlength="45" class="cxs1" required/>
+                <!--Email -->
+                <div class="form-row">
+                    <div class="col-md-6 mb-8">
+                        <label>Email:</label>
+                        <input class="form-control border border-dark" type="email" name="email" id="email" maxlength="40" quired/>
+                    </div>
+                    <div class="col-md-6 mb-8">
+                        <label>Repita o email:</label>
+                        <input type="email" class="form-control border border-dark" name="repemail" id="reemail"  maxlength="40" required>
+                    </div>
 
-                <p class="textos1">Repita Email :</p> 
-                <input type="email" name="repemail" id="reemail"  maxlength="45" class="cxs1" required/>
-
-                <p class="textos1" >Senha :</p>
-                <input type="password" name="senha" id="senha" maxlength="20" class="cxs1" required/>
-
-                <p class="textos1">Repita Senha :</p>
-                <input type="password" name="repsenha" id="repsenha" maxlength="20" class="cxs1" required/>
-
-                <p class="textos1">Telefone:</p>
-
-                <div id="telcx">
-                    <input name="ddd" type="text" id="ddd"  maxlength="2" required/>
-                    <input type="text" name="telefone" maxlength="9" id="telefone" required />       
                 </div>
 
-                <div id="tipo">
-                    <p class="texto">Tipo :</p>
-                    <div id="radioCadastro">
-                        <p class="cte">Físico</p>
-                        <INPUT TYPE="RADIO" NAME="tipoPessoa" id="idFisico" VALUE="1" required/>
-                        <p class="cte"> Jurídico </p>
-                        <INPUT TYPE="RADIO" NAME="tipoPessoa" id="idJuridico" VALUE="2" required/>	
+                <!--Senha -->
+                <div class="form-row">
+                    <div class="col-md-6 mb-8">
+                        <label>Senha:</label>
+                        <input type="password" class="form-control border border-dark" name="senha" maxlength="20" id="senha" required>
+                    </div>
+                    <div class="col-md-6 mb-8">
+                        <label>Repita a Senha:</label>
+                        <input type="password" class="form-control border border-dark" name="repsenha" maxlength="20" id="repsenha" required>
                     </div>
                 </div>
 
-                <div id="fisico" class="fj">
+                <!-- Telefone e Data Nascimento -->	
+                <div class="form-row">      
+                    <div class="col-md-6 mb-8">
+                        <label>Telefone:</label>
+                        <input type="tel" class="form-control border border-dark" name="telefone"  id="telefone" required>
+                    </div>
 
-                    <p class="textos1">CPF:</p>
-                    <input type="text" name="cpf" id="cpf"  maxlength="11" class="cxs1" placeholder="Insira os 11 digitos" />
+                    <div class="col-md-6 mb-8">
+                        <label>Data de Nascimento:</label>
+                        <input type="date" class="form-control border border-dark" name="data" id="data" class="cxs1" required>
+                    </div>
+                </div>  
 
-                    <p class="textos1">Nome Completo:</p>
-                    <input type="text" name="nomeRazao" id="nome" class="cxs1">
-
-                    <p class="textos1">Data de Nascimento:</p>
-                    <input type="date" name="data" id="data" class="cxs1">
-
+                <!-- Tipo -->
+                <div class="form-group">
+                    <label>Tipo:</label>
+                    <div class="form-check form-check-inline " id="espaco">
+                        <input class="form-check-input" type="radio"  NAME="tipoPessoa" id="idFisico" VALUE="1" required>
+                        <label class="form-check-label">Fisico</label>
+                    </div>
+                    <div class="form-check form-check-inline" id="espaco">
+                        <input class="form-check-input" type="radio"  NAME="tipoPessoa" id="idJuridico" VALUE="2" required>
+                        <label class="form-check-label">Juridico</label>
+                    </div>
                 </div>
 
+                <!-- Nome, Cpf e Sexo -->
+                <div id="fisico" class="fj">	
+                    <div class="form-row">
+                        <div class="col-md-6 mb-8">
+                            <label>Nome Completo:</label>
+                            <input type="text" class="form-control border border-dark" name="nomeRazao" maxlength="40" id="nomeRazao">
+                        </div>
+                        <div class="col-md-6 mb-8">
+                            <label>CPF:</label>
+                            <input type="text" class="form-control border border-dark" name="cpf" id="cpf">
+                        </div>					
+                    </div> 
+
+                    <div class="form-group">
+                        <label>Sexo:</label>
+                        <div class="form-check form-check-inline " id="espaco">
+                            <input class="form-check-input" type="radio"  name="sexo" id="feminino" value="f" required>
+                            <label class="form-check-label">Femino</label>
+                        </div>
+                        <div class="form-check form-check-inline" id="espaco">
+                            <input class="form-check-input" type="radio" name="sexo" id="masculino" value="m" required>
+                            <label class="form-check-label">Masculino</label>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- CNPJ E RAZAO SOCIAL -->
                 <div id="juridico" class="fj">
+                    <div class="form-row">
+                        <div class="col-md-6 mb-8">
+                            <label>CNPJ:</label>
+                            <input type="text" class="form-control border border-dark" name="cnpj" id="cnpj">
+                        </div>
 
-                    <p class="textos1">CNPJ:</p>
-                    <input type="text" name="cnpj" id="cnpj" placeholder="Insira os 14 caracteres" maxlength="14" class="cxs1"/>
-
-                    <p class="textos1">Razão Social:</p>
-                    <input type="text" name="nomeRazao" id="nomeRazao" class="cxs1">
-
+                        <div class="col-md-6 mb-8">
+                            <label for="validationCustom02">Razão Social:</label>
+                            <input type="text" class="form-control border border-dark" name="nomeRazao" id="nomeRazao" onkeypress="return event.charCode >= 97 && event.charCode <= 122">
+                        </div>
+                    </div>
                 </div>
 
-                <p class="textos1" >Cep :</p>
-                <input type="text" name="cep"  maxlength="30" required class="cxs1"/>
+                <!-- CEP,Endereço e Numero  -->
+                <div class="form-row">
+                    <div class="col-md-4 mb-3">
+                        <label>CEP:</label>
+                        <input type="text" class="form-control border border-dark" name="cep"  id="cep" required>         
+                    </div>
 
-                <p class="textos1" >Endereço:</p> 
-                <input type="text" name="logradouro"  maxlength="30" required class="cxs1"/>
+                    <div class="col-md-4 mb-3">
+                        <label>Endereço:</label>
+                        <input type="text" class="form-control border border-dark" name="logradouro" maxlength="50" id="logradouro" required>
+                    </div>
 
-                <p class="textos1">Número:</p>
-                <input name="numero" type="text" id="numero" required class="cxs1"/>
+                    <div class="col-md-4 mb-3">
+                        <label>Numero:</label>
+                        <input type="text" class="form-control border border-dark" id="numero"  maxlength="5" name="numero" required>
+                    </div>
+                </div>
 
-                <p class="textos1">Complemento: </p> 
-                <input type="text" name="complemento"  id="comp" required class="cxs1"/>
+                <!--Complemento, Bairro e Cidade -->
+                <div class="form-row">
+                    <div class="col-md-4 mb-3">
+                        <label>Complemento:</label>
+                        <input type="text" class="form-control border border-dark" name="complemento" id="complemento"  maxlength="20" required>
+                    </div>
+                    <div class="col-md-4 mb-3">
+                        <label>Bairro:</label>
+                        <input type="text" class="form-control border border-dark" name="bairro" id="bairro"  maxlength="20" required>
+                    </div>
 
-                <p class="textos1">Estado: </p>
-                <input type="text" name="estado" id="estado"  maxlength="70" required class="cxs1"/>
+                    <div class="col-md-4 mb-3">
+                        <label>Cidade:</label>
+                        <input type="text" class="form-control border border-dark" name="cidade" id="cidade"  maxlength="20" required>
+                    </div>
 
-                <p class="textos1">Cidade:</p>
-                <input type="text" name="cidade" id="cidade" maxlength="20" required class="cxs1"/>
+                </div>		
 
-                <p class="textos1">Bairro: </p>
-                <input type="text" name="bairro" id="bairro"  maxlength="70" required class="cxs1"/>
+                <!--Estado -->
+                <div class="form-row">
+                    <div class="col-md-4 mb-3">
+                        <label>Estado:</label>
+                        <input type="text" class="form-control border border-dark" name="estado" id="estado"  maxlength="20"required>
+                    </div>
+                </div>
 
             </div>
 
             <div id="end_submit">
                 <input type="checkbox" name="rec_novidades" id="rec_novidades" value="ATIVO" checked="checked" required/>
                 Você Concorda com os termos de uso Ler <a href="#">Termos de Uso</a>
-
                 <p>
-                    <input type="submit" name="cadastrar" id="cadastrar" value="Cadastrar" class="btn"/>
-
-                    <input type="reset" name="limpar" id="limpar" value="Limpar" class="btn"/>
-
+                    <input type="submit" name="cadastrar" id="cadastrar" value="Cadastrar" class="btn btn-primary" />
+                    <input type="reset" name="limpar" id="limpar" value="Limpar" class="btn btn-primary"/>
                 </p>  
-
             </div>
         </form>
 
-        <footer>
-
+        <!-- Footer -->
+        <footer class="py-5 bg-primary">
+            <div class="container">
+                <p class="m-0 text-center text-white">Copyright &copy; DropBooks</p>
+            </div>
+            <!-- /.container -->
         </footer>
+
+
     </body>
+
 </html>
