--- a/web/Item.html
+++ b/web/Item.html
@@ -7,6 +7,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
     <meta name="author" content="">
+    <!-- IMPORTA O MENU SUPERIOR E O FOOTER -->
+      <script src="//code.jquery.com/jquery-1.10.2.js"></script>
+      <script>
+         $(function(){
+            $("#header").load("MenuNavBar.jsp");
+            $("#footer").load("Footer.jsp");
+         });
+      </script>
+      <!-- IMPORTA O MENU SUPERIOR E O FOOTER -->
 
     <title> Item</title>
 
@@ -21,37 +30,9 @@
   <body>
 
     <!-- Navigation -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
-      <div class="container">
-        <a class="navbar-brand" href="#">DropBooks</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarResponsive">
-          <ul class="navbar-nav ml-auto">
-            <li class="nav-item active">
-              <a class="nav-link" href="#">Home
-                <span class="sr-only">(current)</span>
-              </a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">About</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Services</a>
-            </li>
-            <li class="nav-item">
-              <div id="divBusca">
-  
-  <input type="text" id="txtBusca" placeholder="Buscar..." id="btnBusca"/>
- 
-</div>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </nav>
-
+    <div id="header"></div>
+    
+    
     <!-- Page Content -->
     <div class="container">
 
@@ -136,12 +117,7 @@
     <!-- /.container -->
 
     <!-- Footer -->
-    <footer class="py-5 bg-dark">
-      <div class="container">
-        <p class="m-0 text-center text-white">Copyright &copy;DropBooks</p>
-      </div>
-      <!-- /.container -->
-    </footer>
+    <div id="footer"></div>
 
     <!-- Bootstrap core JavaScript -->
     <script src="res/vendor/jquery/jquery.min.js"></script>
